feat: 实现邮件发送、限速、重试、黑名单与日志记录